syntax = "proto3";
package cluster;

import "zencommand.proto";

option go_package = "github.com/pbinitiative/zenbpm/internal/cluster/proto";

// GRPC API exposed through private GRPC endpoint
service ZenService {
  // Notify notifies this node that a remote node is ready
  // for bootstrapping.
  rpc Notify(NotifyRequest) returns (NotifyResponse);
  // Join joins a remote node to the cluster.
  rpc Join(JoinRequest) returns (JoinResponse);

  // requests directed at zen cluster leader to perform changes to ClusterState

  // called by a partition leader when new node joins the cluster
  rpc AddPartitionNode(AddPartitionNodeRequest)
      returns (AddPartitionNodeResponse);
  // called by a partition leader when node becomes unreachable
  rpc ShutdownPartitionNode(ShutdownPartitionNodeRequest)
      returns (ShutdownPartitionNodeResponse);
  // called by a partition leader when he becomes a leader of partition cluster
  rpc PartitionNodeLeaderChange(PartitionNodeLeaderChangeRequest)
      returns (PartitionNodeLeaderChangeResponse);
  // called by a partition leader when member node has to be reaped due to reap
  // settings
  rpc RemovePartitionNode(RemovePartitionNodeRequest)
      returns (RemovePartitionNodeResponse);
  // called by a partition leader when member node becomes responsive after
  // being marked as shut down
  rpc ResumePartitionNode(ResumePartitionNodeRequest)
      returns (ResumePartitionNodeResponse);

  // cluster management endpoints

  rpc ClusterBackup(ClusterBackupRequest) returns (ClusterBackupResponse);
  rpc ClusterRestore(ClusterRestoreRequest) returns (ClusterRestoreResponse);
  rpc ConfigurationUpdate(ConfigurationUpdateRequest)
      returns (ConfigurationUpdateResponse);
  rpc AssignPartition(AssignPartitionRequest) returns (AssignPartitionResponse);
  rpc UnassignPartition(UnassignPartitionRequest)
      returns (UnassignPartitionResponse);
  rpc PartitionBackup(PartitionBackupRequest) returns (PartitionBackupResponse);
  rpc PartitionRestore(PartitionRestoreRequest)
      returns (PartitionRestoreResponse);

  rpc NodeCommand(zencommand.Command) returns (NodeCommandResponse);
}

// TODO: do we want to keep custom error struct or use the default error handling?
message ErrorResult {
  uint32 code = 1;
  string message = 2;
}

message NotifyRequest {
  string id = 1;
  string address = 2;
}

message NotifyResponse {
  optional ErrorResult error = 1;
}

message JoinRequest {
  string id = 1;
  string address = 2;
  bool voter = 3;
}

message JoinResponse {
  optional ErrorResult error = 1;
  string leader = 2;
}

message AddPartitionNodeRequest {
  string id = 1;
  string address = 2;
  bool voter = 3;
  uint32 partition = 4;
}

message AddPartitionNodeResponse {
  optional ErrorResult error = 1;
}

message ShutdownPartitionNodeRequest {
  string id = 1;
  uint32 partition = 2;
}

message ShutdownPartitionNodeResponse {
  optional ErrorResult error = 1;
}

message PartitionNodeLeaderChangeRequest {
  string id = 1;
  uint32 partition = 2;
}

message PartitionNodeLeaderChangeResponse {
  optional ErrorResult error = 1;
}

message RemovePartitionNodeRequest {
  string id = 1;
  uint32 partition = 2;
}

message RemovePartitionNodeResponse {
  optional ErrorResult error = 1;
}

message ResumePartitionNodeRequest {
  string id = 1;
  uint32 partition = 2;
}

message ResumePartitionNodeResponse {
  optional ErrorResult error = 1;
}

// TODO: implement missing messages when needed by cluster communication
message PartitionRestoreRequest {}
message PartitionRestoreResponse {}
message PartitionBackupRequest {}
message PartitionBackupResponse {}
message UnassignPartitionRequest {}
message UnassignPartitionResponse {}
message AssignPartitionRequest {}
message AssignPartitionResponse {}
message ConfigurationUpdateRequest {}
message ConfigurationUpdateResponse {}
message ClusterRestoreRequest {}
message ClusterRestoreResponse {}
message ClusterBackupRequest {}
message ClusterBackupResponse {}

message NodeCommandResponse {
  optional ErrorResult error = 1;
  zencommand.Command.Type type = 2;
  oneof response {
    ClusterNodeChangeResponse node_change = 3;
    ClusterNodePartitionChangeResponse node_partition_change = 4;
  }
}

message ClusterNodeChangeResponse {}
message ClusterNodePartitionChangeResponse {}
